# richie-rich-vuejs-box

./: .gitignore  .gitpod.yml  Cargo.toml  Makefile  NOTICE  README.md
app/: README.md  index.html  package.json  tsconfig.json
app/src/: App.vue
app/src/components/: SecretBox.vue
app/src/components/SecretBox/: ContractApi.ts  SecretBox.vue  Types.ts
app/tutorial/: guide.md
app/tutorial/lessonstart/contract/: contract.rs
app/tutorial/lessonstart/webapp/: ContractApi.ts  SecretBox.vue  Types.ts
app/tutorial/solutions/: SecretBox.vue  contract.rs
app/tutorial/solutions/webapp/: SecretBox.vue
examples/: schema.rs
schema/: execute_msg.json  outcome.json  query_answer.json  query_msg.json
scripts/: create_secret_box.sh
src/: contract.rs  error.rs  msg.rs  state.rs
tests/: secretbox.ts
