[package]
name = "richie-rich-vuejs-box"
version = "0.1.0"
authors = ["DDT <ddt@scrt.university>"]
edition = "2021"
description = "Secret Box app for the Richie Rich contract"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
# cosmwasm-std = { git = "https://github.com/scrtlabs/cosmwasm", tag = "v1.1.9-secret", default-features = false }
# secret-toolkit = { git = "https://github.com/scrtlabs/secret-toolkit", tag = "v0.8.0", default-features = false, features = ["storage", "serialization", "utils", "permit", "viewing-key", "crypto"] }

cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.0.0" }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }
secret-toolkit = { version = "0.7.0",  features = [
  "permit",
  "viewing-key",
] }


# [dev-dependencies]
cosmwasm-schema = "1.0.0"
